# MiniMips32

./: README.md
MiniMIPS32/: MiniMIPS32.xpr
MiniMIPS32/MiniMIPS32.ip_user_files/ip/data_ram/: data_ram_stub.v
MiniMIPS32/MiniMIPS32.ip_user_files/ip/inst_rom/: inst_rom_stub.v  inst_rom_stub.vhdl
MiniMIPS32/MiniMIPS32.ip_user_files/mem_init_files/: MT_inst.coe  addi_inst.coe  addu_inst.coe  arith_inst.coe  bound_inst.coe  data_ram.coe  data_ram.mif  fibb_data.coe  fibb_inst.coe  lw.coe  multu_inst.coe  over_data.coe  power2_inst.coe  sra_inst.coe
MiniMIPS32/MiniMIPS32.runs/data_ram_synth_1/: vivado.pb
MiniMIPS32/MiniMIPS32.srcs/sources_1/new/: MiniMIPS32.v  MiniMIPS32_SYS.v  cp0_reg.v  defines.v  exe_stage.v  exemem_reg.v  hilo.v  id_stage.v  idexe_reg.v  if_stage.v  ifid_reg.v  mem_stage.v  memwb_reg.v  regfile.v  (+2 more)
MiniMIPS32/test/: arith.S  arith_inst.coe  bound.S  bound_inst.coe  ls1.S  ls1_inst.coe  mult.S  mult_inst.coe  over.S  over_inst.coe  power2.S  power2_inst.coe
MiniMIPS32/test_lab3/: data_dep.S  data_dep_inst.coe  div_test.S  div_test_inst.coe  exception.S  exception_inst.coe  jump.S  jump_inst.coe  pause.S  pause_inst.coe
TEMU/mips_sc/: Makefile
TEMU/mips_sc/src/: Makefile.testcase  div_test.S  factorial.S  fib.S  lite_fib.S  overflow_test.S  privileged_test.S  trap.h
TEMU/pytemu/: requirements.txt
TEMU/pytemu/src/: CPU.py  Debugger.py  ExcCode.py  Memory.py  RegList.py  Register.py  main.py  requirements.txt  ui.py  util.py
TEMU/pytemu/test/: test_CPU.py  test_Memory.py
TEMU/temu/: CMakeLists.txt
wzs-TEMU/src/: compute.py  main.py
(+127 files in other folders)
